# transaction-reporting

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  manage.py  pyproject.toml
.github/workflows/: ci.yml
envs/: .env.example
transaction_reporting/: asgi.py  settings.py  urls.py  wsgi.py
transactions/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
transactions/fixtures/: transactions.json
transactions/management/commands/: load_transactions.py
transactions/migrations/: 0001_initial.py  0002_alter_transaction_transaction_number.py
transactions/tests/: conftest.py  test_api_list.py  test_api_report.py  test_services.py
transactions/views/: __init__.py  base.py  list.py  report.py
