[tool.poetry]
name = "transaction-reporting"
version = "0.1.0"
description = "Django backend for transaction reporting and aggregation."
authors = ["Sergii Denysiuk <sergii.denysiuk@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
Django = "^5.2.8"
djangorestframework = "^3.16"
inflection = "^0.5.1"  # for DRF get_schema_view()
uritemplate = "^4.2.0"  # for DRF get_schema_view()
pyyaml = "^6.0.3"  # for DRF get_schema_view()
psycopg = {extras = ["binary"], version = "3.3.0"}
django-environ = "^0.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-django = "^4.11.1"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "transaction_reporting.settings"
python_files = [
  "tests.py",
  "test_*.py",
  "*_tests.py",
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "B", "UP", "SIM", "PLE", "C90"]
ignore = ["E203", "E501"]
fix = true

[tool.mypy]
python_version = "3.13"
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
strict_optional = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
